# public-ai-engineering-interview

./: .env.example  CANDIDATE_GUIDE_README.md  FHIR_README.md  GLUCOSE_README.md  HEARTRATE_README.md  README.md  SNOMED_CT_README.md  docker-compose.yml  fixenv.sh
backend/python/: Dockerfile  main.py  pyproject.toml
backend/python/services/: chat_agent.py  emr_parser.py  wearables_analytics.py
backend/python/tests/: TEST_SCRIPTS_README.md  test_emr_parser.py  test_wearables_analytics.py
frontend/components/: ChatInterface.tsx  CreateUserVital.tsx
frontend/components/dashboard/: WorkoutPanel.tsx
frontend/lib/: client.tsx
frontend/models/: index.tsx
frontend/pages/: index.tsx
synthea/data/: hospitalInformation1753458772585.json  practitionerInformation1753458772585.json
